Fix menu vertical align

--- a/wp-content/themes/distylight/assets/css/_layout.sass
+++ b/wp-content/themes/distylight/assets/css/_layout.sass
@@ -9,6 +9,9 @@ header.navigation
   position: fixed
   z-index: 200
   font-family: misolight, Arial, sans-serif
+  .brand
+    padding: 0
+    margin: 0
   .menu, .sub-menu
     list-style: none
     .menu-item
@@ -74,7 +77,7 @@ header.navigation
       margin: 0
       position: absolute
       right: 0
-      top: 30%
+      top: 1em
       .menu-item
         margin: 0
         margin-right: 3em
